2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* uri.tcl: Updated version number to sync with 1.6.1
	* uri.man: release.
	* pkgIndex.tcl:

2004-05-03  Andreas Kupries  <andreask@pliers.activestate.com>

	* uri.test:
	* uri.tcl (SplitHttp): Fixed [SF Tcllib Bug 936064]. Now
	  extracting user/password information from the Http URI as
	  well. Simple change from 'GetHostPort' to 'GetUPHP'. Updated the
	  test suite as well (One new test, and update of 4 existing
	  tests).

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2004-02-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* urn.test: Added dict sorting for reliable comparisons.

2003-08-27  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* uri.tcl: Applied a fix for bug #795032: damage to global vars.

2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.4 ========================
	* 

2003-04-29  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* urn-scheme.tcl (::uri::urn::quote): Fix this to work properly
	with tcl 8.2.

2003-04-14  Andreas Kupries  <andreask@activestate.com>

	* uri.man:
	* uri.tcl (split): Accepted the FR [#545368] by Mark G. Saye
	  <markgsaye@users.sourceforge.net>, with a slight difference. To
	  keep API compatibibility the http stays the default scheme if
	  none was specified.

2003-04-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* uri-rfc2396.test: Added constraint 'knownBug' to these
	  tests. And reference to [#581781].

2003-04-11  Andreas Kupries  <andreask@activestate.com>

	* uri.test:
	* uri.tcl (::uri::split): Fixed bug #676976 reported by Jason
	  Mills <jasonmills@users.sourceforge.net>. An incorrect regular
	  expression (typo in character class) accepted more character
	  than it should have.

2003-04-10  Andreas Kupries  <andreask@activestate.com>

	* pkgIndex.tcl:
	* uri.man: